# salauskilke

./: .env.template  .gitattributes  .gitignore  README.md  docker-compose.yaml  go.mod  go.sum  package-lock.json  package.json  sqlc.yaml  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: tests.yml
backend/: .env.template  Cargo.toml
backend/db/: schema.sql
backend/db/migrations/: 20250225175351_init.up.sql
backend/src/: lib.rs  main.rs
backend/src/controllers/: errors.rs  mod.rs  opaque.rs
backend/src/http/: auth.rs  errors.rs  index.rs  mod.rs
backend/src/models/: mod.rs
backend/src/utils/: base64.rs  config.rs  mod.rs
backend/tests/: auth_e2e.rs  utils.rs
cmd/: main.go
internal/: router.go
internal/db/migrations/: 20241216143450_init.sql
internal/db/queries/: app_user.sql
internal/handlers/: auth.go  handlers.go
internal/server/: handlers.go  routes.go
internal/templates/components/: base.html
internal/templates/pages/: base.html
internal/ts-client/: client.ts
internal/utils/: db.go  encoding.go  opaque.go
test/: auth_handlers_test.go  auth_logic_encoded_messages_test.go  auth_logic_test.go  auth_test.go  opaque_test.go  ping_test.go
test/utils/: utils.go
