[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "tokio"] }
dotenv = "0.15.0"
envconfig = "0.11.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["chrono", "macros", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
